2021-05-18 Fred Gleason <fredg@paravelsystems.com>
	* Initial repo creation.
2021-05-18 Fred Gleason <fredg@paravelsystems.com>
	* Added dependency information for the 'hpklinux' package.
2021-08-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'prepare_build.sh' to automatically generate the
	correct 'linux-headers-<ver>' run time dependency.
2022-06-07 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'linux-headers' dependencies so as not to include
	the specific kernel version.
	* Incremented the package version to 4.20.35-2.
2022-06-07 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'linux-headers' dependencies so as not to include
	the specific kernel version.
	* Incremented the package version to 4.20.35-2.
2023-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'prerm' script that made it impossible to
	uninstall the 'hpklinux' package.
2023-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'clean_build.sh' script.
2023-08-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'debian/prerm' that caused package removal to fail.
2023-08-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 4.20.35-3.
2023-08-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 4.20.39-1.
2023-12-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a check to ensure that the kernel module is built, installed
	and loaded after each system reboot.
2023-12-21 Fred Gleason <fredg@paravelsystems.com>
	* Removed version-specific information from 'debian/postinst'.