@@ -1,0 +1,9 @@
+#
+# Maintainer's Note:
+#
+# When incrementing versions, be sure to create a new entry in
+# 'debian/changelog'!
+#
+ASIHPI_PKG_VERSION=4.20.39-1
+ASIHPI_VERSION=4.20.39
+ASIHPI_MAJOR_VERSION=4.20
