@@ -1,21 +1,20 @@
 hpklinux (4.20.39-1) stable; urgency=medium
 
-	* Restored support for ASI66xx adapters.
+  * Restored support for ASI66xx adapters.
 
- -- Fred Gleason <fredg@paravelsystems.com>  Thu, 10 August 2023 13:08:00 -0400
+ -- Fred Gleason <fredg@paravelsystems.com>  Thu, 10 Aug 2023 13:08:00 -0400
 
 hpklinux (4.20.35-3) stable; urgency=medium
 
-	* Fixed a bug that threw an error during package removal.
+  * Fixed a bug that threw an error during package removal.
 
- -- Fred Gleason <fredg@paravelsystems.com>  Mon, 7 August 2023 13:08:00 -0400
+ -- Fred Gleason <fredg@paravelsystems.com>  Mon, 7 Aug 2023 13:08:00 -0400
 
 hpklinux (4.20.35-2) unstable; urgency=medium
 
-	* Changed the 'linux-headers' dependencies so as not to include
-	the specific kernel version.
+  * Changed the 'linux-headers' dependencies so as not to include the specific kernel version.
 
- -- Fred Gleason <fredg@paravelsystems.com>  Tue, 7 June 2022 14:59:00 -0400
+ -- Fred Gleason <fredg@paravelsystems.com>  Tue, 7 Jun 2022 14:59:00 -0400
 
 hpklinux (4.20.35-1) unstable; urgency=medium
 
